--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 
     <body>
 
-<img src="https://yt3.ggpht.com/ytc/AAUvwnj6903nEz4j0gdeKJaRRwlzmjKzB22540nj99DKEg=s176-c-k-c0x00ffffff-no-rj-mo" alt="hiujgf">
+<img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="hiujgf">
          <p>testjyyuhj7ufhfmhfmmjiku</p>
 
          <p>bhnmjhngbfy</p>
