--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 
     <body>
 
-<img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="hiujgf">
+<img src="test.png" alt="hiujgf">
          <p>testjyyuhj7ufhfmhfmmjiku</p>
 
          <p>bhnmjhngbfy</p>
